# blackfisk-svn

./: BF.workspace  BFAboutDlg.cpp  BFApp.cpp  BFApp.h  BFBackupCtrl.cpp  BFBackupCtrl.h  BFBackupLog.cpp  BFBackupLog.h  BFBackupProgressDlg.cpp  BFBackupProgressDlg.h  BFBackupQuestionDlg.cpp  BFBackupQuestionDlg.h  BFBackupTree.cpp  BFBackupTree.h  BFCmdLine.cpp  BFCmdLine.h  BFCore.cpp  BFCore.h  BFCore_traverser.cpp  BFCore_traverser.h  BFDestinationCtrl.cpp  BFDestinationCtrl.h  BFDestinationCtrl2.h  BFDestinationDlg.cpp  BFDestinationDlg.h  BFDirCtrl.cpp  BFDirCtrl.h  BFHelpCtrl.cpp  BFHelpCtrl.h  BFHyperlinkCtrl.cpp  BFHyperlinkCtrl.h  BFIconTable.cpp  BFIconTable.h  BFLog.cpp  BFLog.h  BFLogBase.cpp  BFLogBase.h  BFLogViewDlg.cpp  BFLogViewDlg.h  BFMacroButton.cpp  (+98 more)
_graphic/vorlagen/: v.odt
_trash/: OBBackupDropTarget.cpp  OBBackupDropTarget.h  OBProgressDlg.cpp  OBProgressDlg.h  OBProjectFile.cpp  OBProjectFile.h  libzip_contact.txt
graphic/: icons.txt  logo.txt
locale/de/: ob.mo
locale/fr/: ob.mo  ob.po
trunk/: BF.workspace  BFAboutDlg.cpp  BFAboutDlg.h  BFApp.cpp  BFApp.h  BFBackupInfoCtrl.cpp  BFBackupInfoCtrl.h  BFBackupLog.cpp  BFBackupLog.h  BFBackupProgressDlg.cpp  BFBackupProgressDlg.h  BFBackupQuestionDlg.cpp  BFBackupTree.cpp  BFBackupTree.h  BFCore.cpp  BFCore.h  BFCore_traverser.cpp  BFCore_traverser.h  BFDestinationCtrl.cpp  BFDestinationCtrl.h  BFDestinationCtrl2.cpp  BFDestinationDlg.cpp  BFDirCtrl.cpp  BFDirCtrl.h  BFExcludeCtrl.h  BFHelpCtrl.cpp  BFHelpCtrl.h  BFHyperlinkCtrl.h  BFIconTable.cpp  BFIsWorkingCtrl.cpp  BFIsWorkingCtrl.h  BFLog.cpp  BFLog.h  BFLogBase.cpp  BFLogBase.h  BFLogViewDlg.cpp  BFLogViewDlg.h  BFMainFrame.cpp  BFMainFrame.h  BFMsgObserver.cpp  (+55 more)
trunk/graphic/: icons.htm  icons.txt
trunk/graphic/src/: logo.xcf  logo_text.xcf  logo_warp.xcf  yes.xcf
trunk/include/: BFAboutDlg.h  BFApp.h  BFBackup.h  BFBackupInfoCtrl.h  BFBackupLog.h  BFBackupProgressDlg.h  BFBackupQuestionDlg.h  BFBackupTree.h  BFBitmapButton.h  BFCmdLine.h  BFCore.h  BFCore_traverser.h  BFCronCtrl.h  BFCrontabManager.h  BFDestinationCtrl.h  BFDestinationDlg.h  BFDirCtrl.h  BFEnvironment.h  BFExcludeCtrl.h  BFHelpCtrl.h  BFHyperlinkCtrl.h  BFIconTable.h  BFIsWorkingCtrl.h  BFLog.h  BFLogBase.h  BFLogViewDlg.h  BFMainFrame.h  BFMessageDlg.h  BFMsgObserver.h  BFOperation.h  BFPlaceholderButton.h  BFProcessMsgDlg.h  BFProcessMsgSubject.h  BFProgressCtrl.h  BFProject.h  BFProjectPlannerDlg.h  BFProjectSettings.h  BFProjectSettingsCtrl.h  BFProjectSettingsDlg.h  BFRootTask.h  (+23 more)
trunk/install/: blackfisk.iss
trunk/src/: BFAboutDlg.cpp  BFApp.cpp  BFBackup.cpp  BFBackupInfoCtrl.cpp  BFBackupLog.cpp  BFBackupProgressDlg.cpp  BFBackupQuestionDlg.cpp  BFBackupTree.cpp  BFBitmapButton.cpp  BFCmdLine.cpp  BFCore.cpp  BFCore_traverser.cpp  BFCronCtrl.cpp  BFCrontabManager.cpp  BFDestinationCtrl.cpp  BFDestinationDlg.cpp  BFDirCtrl.cpp  BFEnvironment.cpp  BFExcludeCtrl.cpp  BFHelpCtrl.cpp  BFHyperlinkCtrl.cpp  BFIconTable.cpp  BFIsWorkingCtrl.cpp  BFLog.cpp  BFLogBase.cpp  BFLogViewDlg.cpp  BFMainFrame.cpp  BFMessageDlg.cpp  BFMsgObserver.cpp  BFOperation.cpp  BFPlaceholderButton.cpp  BFProcessMsgDlg.cpp  BFProcessMsgSubject.cpp  BFProgressCtrl.cpp  BFProject.cpp  BFProjectPlannerDlg.cpp  BFProjectSettings.cpp  BFProjectSettingsCtrl.cpp  BFProjectSettingsDlg.cpp  BFRootTask.cpp  (+18 more)
trunk/wxCron/: crontab
trunk/wxSerialize/: CMakeLists.txt  README
trunk/wxSerialize/src/: CMakeLists.txt
wxArchive/: CMakeLists.txt  README
wxArchive/docs/: Doxyfile.in
wxArchive/include/wx/: wxArchive.h
wxArchive/projects/codeblocks/: archive_test.cbp  archive_test.layout
wxArchive/samples/: CMakeLists.txt
wxArchive/samples/archive_test/: CMakeLists.txt  archive_test.cpp
wxArchive/src/: CMakeLists.txt  wxArchive.cpp
wxSerialize/src/: wxSerialize.cpp
(+7 files in other folders)
