##################################################
# $RCSfile$
# $Source$
# $Revision$
# $Date$
#
# Author: Jorgen Bodde
# Licence: wxWindows licence
##################################################

# Add files to library common

ADD_LIBRARY(archive wxArchive.cpp 
            ${ARCHIVE_SOURCE_DIR}/include/wx/wxArchive.h)
