
##################################################
# $RCSfile$
# $Source$
# $Revision$
# $Date$
#
# Author: Jorgen Bodde
# Licence: wxWindows licence
##################################################

# Add files to library common

ADD_LIBRARY(serialize wxSerialize.cpp 
            ${SERIALIZE_SOURCE_DIR}/include/wx/wxSerialize.h)
